export const snapshot = {};

snapshot[`after onRunStart 1`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 1`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 1`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (2) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onStepStart - Step that passes (2) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onStepEnd - Step that passes (2) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (2) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onStepStart - Step that passes (3) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onStepEnd - Step that passes (3) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onRunEnd 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m

[1mSummary[22m
  [32m✓[39m 3 scenarios passed
  [90m  3 scenarios total[39m [90m[45.000ms][39m
"
`;

snapshot[`after onRunStart 2`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 2`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 2`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 2`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 2`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onScenarioStart - Scenario with failing step (2) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onStepStart - Step that passes (2-1) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onStepEnd - Step that passes (2-1) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onStepStart - Step that fails (2-2) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onStepError - Step that fails (2-2) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m
  [31mAssertion failed[39m
  [90mat Object.<anonymous> (<file>:532:11)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)[39m
"
`;

snapshot[`after onScenarioEnd - Scenario with failing step (2) 1`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m
  [31mAssertion failed[39m
  [90mat Object.<anonymous> (<file>:532:11)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)[39m
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 2`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m
  [31mAssertion failed[39m
  [90mat Object.<anonymous> (<file>:532:11)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)[39m
"
`;

snapshot[`after onStepStart - Step that passes (3) 2`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m
  [31mAssertion failed[39m
  [90mat Object.<anonymous> (<file>:532:11)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)[39m
"
`;

snapshot[`after onStepEnd - Step that passes (3) 2`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m
  [31mAssertion failed[39m
  [90mat Object.<anonymous> (<file>:532:11)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)[39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 2`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m
  [31mAssertion failed[39m
  [90mat Object.<anonymous> (<file>:532:11)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)[39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
"
`;

snapshot[`after onRunEnd 2`] = `
"[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m
[31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m
  [31mAssertion failed[39m
  [90mat Object.<anonymous> (<file>:532:11)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)[39m
  [90mat async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)[39m
[32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [90m[10.000ms][39m

[1mSummary[22m
  [32m✓[39m 2 scenarios passed
  [31m✗[39m 1 scenarios failed

[1mFailed Tests[22m
  [31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m
  [90m  3 scenarios total[39m [90m[35.000ms][39m
"
`;

snapshot[`after onRunStart 3`] = `""`;

snapshot[`after onRunEnd 3`] = `
"
[1mSummary[22m
  [32m✓[39m 0 scenarios passed
  [90m  0 scenarios total[39m [90m[0.000ms][39m
"
`;

snapshot[`after onRunStart 4`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 3`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 3`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 3`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 3`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (2) 2`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepStart - Step that passes (2) 2`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepEnd - Step that passes (2) 2`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (2) 2`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 3`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepStart - Step that passes (3) 3`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepEnd - Step that passes (3) 3`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 3`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onRunEnd 4`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]

Summary
  ✓ 3 scenarios passed
    3 scenarios total [45.000ms]
"
`;

snapshot[`after onRunStart 5`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 4`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 4`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 4`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 4`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioStart - Scenario with failing step (2) 2`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepStart - Step that passes (2-1) 2`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepEnd - Step that passes (2-1) 2`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepStart - Step that fails (2-2) 2`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepError - Step that fails (2-2) 2`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
✗ Scenario with failing step > Step that fails (test.scenario.ts:20)
  Assertion failed
  at Object.<anonymous> (<file>:744:11)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)
"
`;

snapshot[`after onScenarioEnd - Scenario with failing step (2) 2`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
✗ Scenario with failing step > Step that fails (test.scenario.ts:20)
  Assertion failed
  at Object.<anonymous> (<file>:744:11)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 4`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
✗ Scenario with failing step > Step that fails (test.scenario.ts:20)
  Assertion failed
  at Object.<anonymous> (<file>:744:11)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)
"
`;

snapshot[`after onStepStart - Step that passes (3) 4`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
✗ Scenario with failing step > Step that fails (test.scenario.ts:20)
  Assertion failed
  at Object.<anonymous> (<file>:744:11)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)
"
`;

snapshot[`after onStepEnd - Step that passes (3) 4`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
✗ Scenario with failing step > Step that fails (test.scenario.ts:20)
  Assertion failed
  at Object.<anonymous> (<file>:744:11)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 4`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
✗ Scenario with failing step > Step that fails (test.scenario.ts:20)
  Assertion failed
  at Object.<anonymous> (<file>:744:11)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onRunEnd 5`] = `
"✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
✗ Scenario with failing step > Step that fails (test.scenario.ts:20)
  Assertion failed
  at Object.<anonymous> (<file>:744:11)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:429:7)
  at async TestSuiteInternal.runTest (https://jsr.io/@std/testing/1.0.16/_test_suite.ts:417:9)
✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]

Summary
  ✓ 2 scenarios passed
  ✗ 1 scenarios failed

Failed Tests
  ✗ Scenario with failing step > Step that fails (test.scenario.ts:20)
    3 scenarios total [35.000ms]
"
`;

snapshot[`after onRunStart 6`] = `""`;

snapshot[`after onRunEnd 6`] = `
"
Summary
  ✓ 0 scenarios passed
    0 scenarios total [0.000ms]
"
`;
